[package]
name = "displacement"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
termion = "1.5"
crossterm = "0.5.0"
ascii = "1.0.0"
tokio = { version = "1.14.0", features = ["full"] }
